# Applied_Generative_AI_Praktikum

./: .gitignore  AGENTS.md  P01_Entwicklungsumgebung.ipynb  P02_Tokenizer_Embeddings_MLP.ipynb  P03_Transformer_Attention.ipynb  P04_Halluzinationen_Perplexity.ipynb  P05_Prompting_InContextLearning.ipynb  P06_RAG_Systeme.ipynb  P06_WebScraping_Embeddings.ipynb  P07_Finetuning_PEFT.ipynb  P07_Vektordatenbanken_RAG.ipynb  P07_Vektordatenbanken_RAG_tested.ipynb  P08_Hardware_Inferenz.ipynb  P08_Reasoning_Agenten.ipynb  P09_AdvancedAgents_Security.ipynb  P09_AdvancedAgents_Security_tested.ipynb  P09_Agenten_MCP.ipynb  P10_Evaluation_Benchmarks.ipynb  P10_Evaluation_Benchmarks_tested.ipynb  P11_Deployment_Quantization.ipynb  P11_Deployment_Quantization_tested.ipynb  P11_Ethik_Sicherheit_Recht.ipynb  P12_Zusammenfassung_Wiederholung.ipynb  P12_Zusammenfassung_Wiederholung_tested.ipynb  README.md  pyproject.toml  requirements.txt
exportToHTML/: P01_Entwicklungsumgebung.html
