[project]
name = "praktikum"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "bertviz==1.4.1",
    "gensim==4.4.0",
    "ipykernel>=7.2.0",
    "matplotlib==3.10.8",
    "nbconvert>=7.17.0",
    "numpy==2.4.4",
    "pandas==3.0.2",
    "pandoc>=2.4",
    "playwright>=1.58.0",
    "requests==2.33.1",
    "scikit-learn==1.8.0",
    "seaborn==0.13.2",
    "tiktoken==0.12.0",
    "torch==2.11.0",
    "torchvision==0.26.0",
    "transformers==5.5.0",
]
