[project]
name = "praktikum"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "bertviz==1.4.1",
    "gensim==4.4.0",
    "ipykernel>=7.2.0",
    "matplotlib==3.10.8",
    "nbconvert>=7.17.0",
    "numpy==2.4.4",
    "ollama==0.6.1",
    "pandas==3.0.2",
    "pandoc>=2.4",
    "playwright>=1.58.0",
    "requests==2.33.1",
    "scikit-learn==1.8.0",
    "seaborn==0.13.2",
    "tiktoken==0.12.0",
    "torch==2.10.0",
    "torchvision==0.25.0",
    "transformers==5.6.0",
    "umap-learn>=0.5.12",
]
